--- a/config/database.yml
+++ b/config/database.yml
@@ -1,24 +1,24 @@
 default: &default
-encoding: utf8
-pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
+  encoding: utf8
+  pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
 
 development:
-<<: *default
-adapter: mysql2
-username: root
-password:
-host: localhost
-database: pin-go-41675_development
+  <<: *default
+  adapter: mysql2
+  username: root
+  password:
+  host: localhost
+  database: pin-go_development
 
 test:
-<<: *default
-adapter: mysql2
-username: root
-password:
-host: localhost
-database: pin-go-41675_test
+  <<: *default
+  adapter: mysql2
+  username: root
+  password:
+  host: localhost
+  database: pin-go_test
 
 production:
-<<: *default
-adapter: postgresql
-url: <%= ENV['DATABASE_URL'] %>
+  <<: *default
+  adapter: postgresql
+  url: <%= ENV['DATABASE_URL'] %>
